@@ -1,28 +1,20 @@
-package model.wrap;
+package controller.wrapper;
 
-import model.util.servlet.ServletUtil;
+import model.dto.Encodable;
 
-import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 
-public class AjaxHttpServlet extends HttpServlet {
-
-    private static final String UTF_8 = ServletUtil.getUTF_8();
-
-    protected void initialServlet(final HttpServletRequest request) throws UnsupportedEncodingException {
-        request.setCharacterEncoding(UTF_8);
-        // more initial code
-    }
+public class AsynchronousHttpServlet extends AbstractHttpServletWrapper {
 
     protected String receiveJsonRequest(final HttpServletRequest request) throws IOException {
         final BufferedReader reader = new BufferedReader(request.getReader());
-        final String jsonRequest = URLDecoder.decode(reader.readLine(), UTF_8);
+        final String jsonRequest = URLDecoder.decode(reader.readLine(), "UTF-8");
         System.out.println("request = " + jsonRequest); //TODO debug code here.
         return jsonRequest;
     }
@@ -33,5 +25,9 @@ public class AjaxHttpServlet extends HttpServlet {
         System.out.println("response = " + jsonResponse); //TODO debug code here.
         out.print(jsonResponse);
         out.flush();
+    }
+
+    protected boolean isValidToken(final HttpSession session, final Encodable encoded) {
+        return encoded.getToken().equals(session.getAttribute("TOKEN"));
     }
 }
